tests/neg-custom-args/explain/hidden-type-errors.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/explain/hidden-type-errors/Test.scala:6:24 ------------------------
6 |   val x = X.doSomething("XXX") // error
  |           ^^^^^^^^^^^^^^^^^^^^
  |           Found:    String
  |           Required: Int
  |---------------------------------------------------------------------------------------------------------------------
  | Explanation (enabled by `-explain`)
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  |
  | Tree: t12717.A.bar("XXX")
  | I tried to show that
  |   String
  | conforms to
  |   Int
  | but the comparison trace ended with `false`:
  |
  |   ==> String  <:  Int
  |     ==> String  <:  Int
  |     <== String  <:  Int = false
  |   <== String  <:  Int = false
  |
  | The tests were made under the empty constraint
   ---------------------------------------------------------------------------------------------------------------------
